--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ section{
 body{
     text-align: center;
     background-color: dodgerblue;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 ul{
     display: inline;
